<resources>
    <string name="app_name">Homero</string>
    <string name="login_label">Login to your account</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_signin">Sign In</string>
    <string name="signin_label">or sign in with</string>
    <string name="signup_label">Don\'t have an account? Signup</string>
    <string name="register_label">Create your account</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="button_signup">Signup</string>
    <string name="menu_properties">Properties</string>
    <string name="menu_tenants">Tenants</string>
    <string name="menu_transactions">Transactions</string>
    <string name="menu_rent">Collect Rent</string>
    <string name="menu_todo">To-Do</string>
    <string name="menu_trips">Trips</string>
    <string name="menu_doc">Documents</string>
    <string name="menu_vendors">Vendors</string>
    <string name="menu_logout">Logout</string>
    <string name="hint_where">Get started, enter your address</string>
    <string name="title_where">Where is\nyour property?</string>
    <string name="title_add_property">Add Property</string>
    <string name="country">Country*</string>
    <string name="address1">Address Line 1*</string>
    <string name="address1_hint">Enter Address Line 1</string>
    <string name="address2">Address Line 2</string>
    <string name="address2_hint">Enter Address Line 2</string>
    <string name="city">City</string>
    <string name="city_hint">Enter City</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="status">Status*</string>
    <string name="units">Are there multiple units?</string>
    <string name="purchase">How much did you purchase the property for?</string>
    <string name="photo_property">Add a photo of your property</string>
    <string name="title_property_details">Property Details</string>
    <string name="mortgage">Does this property have a mortgage?</string>
    <string name="tenant">Tenants ></string>
    <string name="hint_name">Name</string>
    <string name="signinto_label">Already registered? Click here</string>
    <string name="fullName">Full Name*</string>
    <string name="fullName_hint">Enter Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_hint">Enter Phone Number</string>
    <string name="email">Email</string>
    <string name="hint_enter_email">Enter Email</string>
    <string name="property">Property</string>
    <string name="property_hint">Enter Property</string>
    <string name="date">Tour Date*</string>
    <string name="browse">Browse</string>
    <string name="doc">Application Document</string>
    <string name="address_manual">Enter your address manually</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>