<layout>

    <data>
        <variable
            name="user"
            type="com.apolis.homero.ui.auth.AuthViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginVertical="27dp"
            android:src="@drawable/homero_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_label"
                android:textColor="@color/colorBlack" />

            <EditText
                style="@style/CustomEditText"
                android:background="@drawable/border_black"
                android:hint="@string/hint_email"
                android:text="@={user.email}"/>

            <EditText
                style="@style/CustomEditText"
                android:background="@drawable/border_black"
                android:hint="@string/hint_password"
                android:text="@={user.password}"/>

            <Button
                style="@style/CustomButton"
                android:background="@drawable/button"
                android:text="@string/button_signin"
                android:onClick="@{user::onLoginButtonClicked"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/signin_label"
                android:textColor="@color/colorBlack" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:paddingHorizontal="10dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/border_black"
                    android:drawableTop="@drawable/border_black"
                    android:padding="5dp"
                    android:src="@drawable/google_icon" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/border_black"
                    android:padding="5dp"
                    android:src="@drawable/facebook_icon" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:background="@drawable/border_black"
                    android:padding="5dp"
                    android:src="@drawable/twitter_icon" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/signup_label"
                android:textColor="@color/colorBlack"
                android:onClick="@{user::onRedirect}"/>

        </LinearLayout>

    </LinearLayout>
</layout>