<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:text="@string/title_where"
        android:textColor="@color/colorBlack"
        android:textSize="32sp" />

    <ImageView
        android:id="@+id/watermark_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="30dp"
        android:layout_toLeftOf="@id/text_view_title"
        android:src="@drawable/watermark_location" />

    <TextView
        android:id="@+id/text_view_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/watermark_location"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="7dp"
        android:text="@string/address_manual"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/edit_text_where"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_address"
        android:background="@drawable/border_gray"
        android:drawableLeft="@drawable/ic_location"
        android:drawablePadding="7dp"
        android:hint="@string/hint_where" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_where"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_blue"
        android:padding="7dp"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/text_view_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>