<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:text="@string/title_property_details"
        android:textColor="@color/colorBlack"
        android:textSize="32sp" />

    <ImageView
        android:id="@+id/watermark_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="30dp"
        android:layout_toLeftOf="@id/text_view_title"
        android:src="@drawable/watermark_location" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/watermark_location"
        android:orientation="vertical">

        <com.apolis.homero.helpers.PrefixLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/status">

            <com.apolis.homero.helpers.CustomSpinner
                style="@style/CustomSpinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/status_array" />
        </com.apolis.homero.helpers.PrefixLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <com.apolis.homero.helpers.PrefixLayout
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:title="@string/units" />

            <com.apolis.homero.helpers.CustomRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <com.apolis.homero.helpers.PrefixLayout
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:title="@string/purchase" />

            <com.apolis.homero.helpers.PrefixEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:hint="177000"
                app:prefix="$" />

        </RelativeLayout>

        <TextView
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="7dp"
            android:paddingLeft="20dp"
            android:background="@drawable/border_blue"
            android:drawableLeft="@drawable/ic_camera"
            android:text="@string/photo_property"
            android:textColor="@color/colorPrimary"
            android:gravity="center"/>

    </LinearLayout>

</RelativeLayout>